@@ -8,6 +8,8 @@ Version 0.7.0
   * KIJIHIVE-2. Improved the generation of CREATE EXTERNAL TABLE statements.
       Complex data types should now be supported, and this functionality can be
       invoked as part of the kiji CLI tool, or via the bento-hive.sh script.
+  * KIJIHIVE-39. Force user classes to take precedence in MapReduce jobs
+      created from within Hive.
 
 Version 0.6.0
   * KIJIHIVE-33. Fixed a ClassCastException issue when reading from a
